WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249696
[IFC][hanging punctuation] Line::appendTextContent should call setTrailingStopOrComma when it sees one
https://bugs.webkit.org/show_bug.cgi?id=249696
Summary
[IFC][hanging punctuation] Line::appendTextContent should call setTrailingSto...
alan
Reported
2022-12-20 20:53:38 PST
ssia
Attachments
Patch
(5.11 KB, patch)
2022-12-20 20:56 PST
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(5.11 KB, patch)
2022-12-20 21:25 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2022-12-20 20:56:03 PST
Created
attachment 464134
[details]
Patch
alan
Comment 2
2022-12-20 21:25:46 PST
Created
attachment 464138
[details]
Patch
EWS
Comment 3
2022-12-21 11:14:35 PST
Committed
258203@main
(1c874dbf01e2): <
https://commits.webkit.org/258203@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 464138
[details]
.
Radar WebKit Bug Importer
Comment 4
2022-12-21 11:15:18 PST
<
rdar://problem/103606111
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug