[IFC][hanging punctuation] Line::appendTextContent should call setTrailingStopOrComma when it sees one https://bugs.webkit.org/show_bug.cgi?id=249696

Reviewed by Antti Koivisto.

This is in preparation for supporting "hanging-punctuation: allow-end".

* Source/WebCore/layout/formattingContexts/inline/InlineLine.cpp:
(WebCore::Layout::Line::appendTextContent):
* Source/WebCore/layout/formattingContexts/inline/text/TextUtil.cpp:
(WebCore::Layout::TextUtil::hasHangableStopOrCommaEnd):
(WebCore::Layout::TextUtil::hangableStopOrCommaEndWidth):
* Source/WebCore/layout/formattingContexts/inline/text/TextUtil.h:

Canonical link: https://commits.webkit.org/258203@main